fix: use green instead of teal in bg gradient ex. (#625)

--- a/src/pages/docs/background-clip.mdx
+++ b/src/pages/docs/background-clip.mdx
@@ -41,14 +41,14 @@ Use `bg-clip-text` to crop an element's background to match the shape of the tex
 ```html emerald
 <template preview>
   <div class="text-center text-5xl font-extrabold leading-none tracking-tight">
-    <span class="bg-clip-text text-transparent bg-gradient-to-r from-teal-400 to-blue-500">
+    <span class="bg-clip-text text-transparent bg-gradient-to-r from-green-400 to-blue-500">
       Hello world
     </span>
   </div>
 </template>
 
 <div class="text-5xl font-extrabold ...">
-  <span class="**bg-clip-text** text-transparent bg-gradient-to-r from-teal-400 to-blue-500">
+  <span class="**bg-clip-text** text-transparent bg-gradient-to-r from-green-400 to-blue-500">
     Hello world
   </span>
 </div>
