adding array brackets for the variantOrder docs code snippet (#628)

--- a/src/pages/docs/configuring-variants.mdx
+++ b/src/pages/docs/configuring-variants.mdx
@@ -245,7 +245,7 @@ If you'd like to specify a default sort position for a custom variant, override 
 // tailwind.config.js
 module.exports = {
   // ...
-  variantOrder:
+  variantOrder: [
     'first',
     'last',
     'odd',
@@ -261,7 +261,7 @@ module.exports = {
     'active',
     'group-disabled', // Custom variant
     'disabled',
-  ,
+  ],
   variants: {
     extend: {
       backgroundColor: ['group-disabled'],
