Tweak vite instructions

--- a/src/pages/docs/guides/vue-3-vite.mdx
+++ b/src/pages/docs/guides/vue-3-vite.mdx
@@ -8,7 +8,7 @@ description: "Setting up Tailwind CSS in a Vue 3 and Vite project."
 Start by creating a new Vite project if you don't have one set up already and installing its dependencies:
 
 ```shell
-npm init vite-app my-project
+npx create-vite-app my-project
 cd my-project
 npm install
 ```
