add flex-wrap (#630)
fix https://github.com/tailwindlabs/tailwindcss.com/issues/629

--- a/src/pages/docs/align-content.mdx
+++ b/src/pages/docs/align-content.mdx
@@ -34,7 +34,7 @@ Use `content-start` to pack rows in a container against the start of the cross a
   </div>
 </template>
 
-<div class="h-48 flex **content-start** ...">
+<div class="h-48 flex flex-wrap **content-start** ...">
   <div>1</div>
   <div>2</div>
   <div>3</div>
@@ -68,7 +68,7 @@ Use `content-center` to pack rows in a container in the center of the cross axis
   </div>
 </template>
 
-<div class="h-48 flex **content-center** ...">
+<div class="h-48 flex flex-wrap **content-center** ...">
   <div>1</div>
   <div>2</div>
   <div>3</div>
@@ -102,7 +102,7 @@ Use `content-end` to pack rows in a container against the end of the cross axis:
   </div>
 </template>
 
-<div class="h-48 flex **content-end** ...">
+<div class="h-48 flex flex-wrap **content-end** ...">
   <div>1</div>
   <div>2</div>
   <div>3</div>
@@ -136,7 +136,7 @@ Use `content-between` to distribute rows in a container such that there is an eq
   </div>
 </template>
 
-<div class="h-48 flex **content-between** ...">
+<div class="h-48 flex flex-wrap **content-between** ...">
   <div>1</div>
   <div>2</div>
   <div>3</div>
@@ -170,7 +170,7 @@ Use `content-around` to distribute rows in a container such that there is an equ
   </div>
 </template>
 
-<div class="h-48 flex **content-around** ...">
+<div class="h-48 flex flex-wrap **content-around** ...">
   <div>1</div>
   <div>2</div>
   <div>3</div>
