--- a/src/pages/docs/skew.mdx
+++ b/src/pages/docs/skew.mdx
@@ -44,7 +44,7 @@ Note that because Tailwind implements transforms using [CSS custom properties](h
 To control the skew of an element at a specific breakpoint, add a `{screen}:` prefix to any existing skew utility. For example, use `md:skew-6` to apply the `skew-6` utility at only medium screen sizes and above.
 
 ```html
-<div class="transform **md-skew-6** ..."></div>
+<div class="transform **md:skew-6** ..."></div>
 ```
 
 For more information about Tailwind's responsive design features, check out the [Responsive Design](/docs/responsive-design) documentation.
