Tweak Laravel guide

--- a/src/pages/docs/guides/laravel.mdx
+++ b/src/pages/docs/guides/laravel.mdx
@@ -27,7 +27,7 @@ npm install
 Install Tailwind and its peer-dependencies using `npm`:
 
 ```shell
-npm install tailwindcss@npm:@tailwindcss/postcss7-compat postcss@^7 autoprefixer@^9
+npm install -D tailwindcss@npm:@tailwindcss/postcss7-compat postcss@^7 autoprefixer@^9
 ```
 
 Laravel Mix doesn't support PostCSS 8 yet *(but it's coming soon)* so you need to install [the Tailwind CSS v2.0 PostCSS 7 compatibility build](/docs/installation#post-css-7-compatibility-build) for now as we've shown above.
