Typo in Nuxt guide

--- a/src/pages/docs/guides/nuxtjs.mdx
+++ b/src/pages/docs/guides/nuxtjs.mdx
@@ -11,7 +11,7 @@ Start by creating a new Nuxt.js project if you don't have one set up already usi
 npx create-nuxt-app my-project
 ```
 
-**Do not choose "Tailwind CSS" when prompted to select your "UI Framework"**. This will cause conflicts that prevents you from being able to install Tailwind CSS v2.0 due to the `@nuxtjs/tailwindcss` module depending on an old version of Tailwind.
+**Do not choose "Tailwind CSS" when prompted to select your "UI Framework"**. This will cause conflicts that prevent you from being able to install Tailwind CSS v2.0 due to the `@nuxtjs/tailwindcss` module depending on an old version of Tailwind.
 
 Next, change directories to your new project:
 
