--- a/src/pages/docs/guides/create-react-app.mdx
+++ b/src/pages/docs/guides/create-react-app.mdx
@@ -5,23 +5,36 @@ description: "Setting up Tailwind CSS in a Create React App project."
 
 ## Creating your project
 
-Start by creating a new Create React App project if you don't have one set up already:
+Start by creating a new Create React App project if you don't have one set up already and installing its dependencies:
 
 ```shell
 npx create-react-app my-project
+cd my-project
 ```
+
+---
 
 ## Setting up Tailwind CSS
 
-Install Tailwind CSS, PostCSS, Autoprefixer and CRACO using `npm`:
+### Install Tailwind via npm
+
+Install Tailwind and its peer-dependencies using `npm`:
 
 ```shell
-npm install tailwindcss@npm:@tailwindcss/postcss7-compat postcss@^7 autoprefixer@^9 @craco/craco
+npm install tailwindcss@npm:@tailwindcss/postcss7-compat postcss@^7 autoprefixer@^9
 ```
 
-Create React App currently only supports PostCSS 7, which is why we are installing [the compatibility build](https://tailwindcss.com/docs/installation#post-css-7-compatibility-build) for now.
+Create React App doesn't support PostCSS 8 yet so you need to install [the Tailwind CSS v2.0 PostCSS 7 compatibility build](/docs/installation#post-css-7-compatibility-build) for now as we've shown above.
 
-Next, update your `scripts` in your `package.json` file to use `craco` instead of `react-scripts` for all scripts except `eject`:
+### Install and configure CRACO
+
+Since Create React App doesn't let you override the PostCSS configuration natively, we also need to install [CRACO](https://github.com/gsoft-inc/craco) to be able to configure Tailwind:
+
+```shell
+npm install @craco/craco
+```
+
+Once it's installed, update your `scripts` in your `package.json` file to use `craco` instead of `react-scripts` for all scripts except `eject`:
 
 ```diff-json
   {
@@ -38,31 +51,106 @@ Next, update your `scripts` in your `package.json` file to use `craco` instead o
   }
 ```
 
-Next generate your `tailwind.config.js` file:
-
-```shell
-npx tailwindcss init
-```
-
-Then create a `craco.config.js` at the root of our project and add the following PostCSS configuration:
+Next, create a `craco.config.js` at the root of our project and add the `tailwindcss` and `autoprefixer` as PostCSS plugins:
 
 ```js
 // craco.config.js
 module.exports = {
   style: {
     postcss: {
-      plugins: [require("tailwindcss"), require("autoprefixer")],
+      plugins: [
+        require('tailwindcss'),
+        require('autoprefixer'),
+      ],
     },
   },
-};
+}
 ```
 
-Now, replace the content of `src/index.css` with all of the `@tailwind` directives needed to generate Tailwind's styles:
+If you're planning to use any other PostCSS plugins, you should read our documentation on [using PostCSS as your preprocessor](/docs/using-with-preprocessors) for more details about the best way to order them alongside Tailwind.
+
+### Create your Tailwind configuration file
+
+Next, generate your `tailwind.config.js` file:
+
+```shell
+npx tailwindcss init
+```
+
+This will create a minimal `tailwind.config.js` file at the root of your project:
+
+```js
+// tailwind.config.js
+module.exports = {
+  purge: [],
+  darkMode: false, // or 'media' or 'class'
+  theme: {
+    extend: {},
+  },
+  variants: {},
+  plugins: [],
+}
+```
+
+Learn more about configuring Tailwind in the [configuration documentation](/docs/configuration).
+
+### Configure Tailwind to remove unused styles in production
+
+In your `tailwind.config.js` file, configure the `purge` option with the paths to all of your components so Tailwind can tree-shake unused styles in production builds:
+
+```diff-js
+  // tailwind.config.js
+  module.exports = {
+-   purge: [],
++   purge: ['./src/**/*.js', './public/index.html'],
+    darkMode: false, // or 'media' or 'class'
+    theme: {
+      extend: {}
+    },
+    variants: {},
+    plugins: []
+  }
+```
+
+Read our separate guide on [optimizing for production](/docs/optimizing-for-production) to learn more about tree-shaking unused styles for best performance.
+
+### Include Tailwind in your CSS
+
+Open the `./src/index.css` file that Create React App generates for you by default and use the `@tailwind` directive to include Tailwind's `base`, `components`, and `utilities` styles, replacing the original file contents:
 
 ```css
+/* ./src/index.css */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 ```
 
-That's it! Tailwind CSS is now installed in your project.
+Tailwind will swap these directives out at build-time with all of the styles it generates based on your configured design system.
+
+Read our documentation on [adding base styles](/docs/adding-base-styles), [extracting components](/docs/extracting-components), and [adding new utilities](/docs/adding-new-utilities) for best practices on extending Tailwind with your own custom CSS.
+
+Finally, ensure your CSS file is being imported in your `./src/index.js` file:
+
+```diff-js
+  // src/index.js
+  import React from 'react';
+  import ReactDOM from 'react-dom';
++ import './index.css';
+  import App from './App';
+  import reportWebVitals from './reportWebVitals';
+
+  ReactDOM.render(
+    <React.StrictMode>
+      <App />
+    </React.StrictMode>,
+    document.getElementById('root')
+  );
+
+  // ...
+```
+
+---
+
+You're finished! Now when you run `npm run start` to start the Create React App development server, Tailwind CSS will be ready to use in your project.
+
+[Next learn about the utility-first workflow &rarr;](/docs/utility-first)
