--- a/src/pages/docs/installation.mdx
+++ b/src/pages/docs/installation.mdx
@@ -9,7 +9,7 @@ import { IntegrationGuides } from '@/components/IntegrationGuides'
 import Link from 'next/link'
 import stats from '@/utils/stats'
 
-<!--
+
 
 ## Integration guides
 
@@ -17,11 +17,11 @@ Installing Tailwind CSS can be a slightly different process depending on what ot
 
 <IntegrationGuides/>
 
-Don't see your favorite tool in the list? Follow the instructions for [installing Tailwind CSS as a PostCSS plugin](#installing-tailwind-css-as-a-post-css-plugin) instead to get set up in no time.
+Don't see your favorite tool in the list? We're always working on new guides, but in the mean time you can follow the instructions for [installing Tailwind CSS as a PostCSS plugin](#installing-tailwind-css-as-a-post-css-plugin) instead to get set up in no time.
 
 ---
 
--->
+
 
 ## Installing Tailwind CSS as a PostCSS plugin
 
