Update container plugin class table

--- a/src/pages/docs/container.mdx
+++ b/src/pages/docs/container.mdx
@@ -29,7 +29,7 @@ export const classes = (
     <tbody className="align-baseline">
       <tr>
         <td rowSpan={6} className="py-2 font-mono text-xs text-violet-600 whitespace-nowrap">
-          .container
+          container
         </td>
         <td className="py-2 text-xs italic">
           None
