--- a/src/pages/docs/presets.mdx
+++ b/src/pages/docs/presets.mdx
@@ -116,7 +116,7 @@ module.exports = {
 }
 ```
 
-For more information, read about [disabling the default base configuration](#disabling-the-default-base-configuration).
+For more information, read about [disabling the default configuration](#disabling-the-default-configuration).
 
 ---
 
