--- a/src/pages/docs/installation.mdx
+++ b/src/pages/docs/installation.mdx
@@ -187,7 +187,7 @@ Now you can pull this file into your HTML just like any other stylesheet:
 
 ### Using a custom CSS file
 
-If you'd like to process any custom CSS alongside the default styles Tailwind generates, create a CSS file wherever you normally would and use the `@tailwind` directive to including Tailwind's `base`, `components`, and `utilities` styles:
+If you'd like to process any custom CSS alongside the default styles Tailwind generates, create a CSS file wherever you normally would and use the `@tailwind` directive to include Tailwind's `base`, `components`, and `utilities` styles:
 
 ```css
 /* ./src/tailwind.css */
