Add missing word to “Adding Base Styles” docs

--- a/src/pages/docs/adding-base-styles.mdx
+++ b/src/pages/docs/adding-base-styles.mdx
@@ -98,4 +98,4 @@ module.exports = {
 }
 ```
 
-Any styles added using `addBase` will inserted into the `base` layer alongside Tailwind's other base styles.
+Any styles added using `addBase` will be inserted into the `base` layer alongside Tailwind's other base styles.
